static/css/main.scss
#header #user-name {
  padding: 15px;
  font-size: 2em;
  font-weight: bold;
}
#main_slider {
  width: 948px;
  margin-top: 1em;
  margin-left: auto;
  margin-right: auto;
  height: 363px;
}
#header {
  #logout {
    padding: 15px;
    line-height: 40px;
    vertical-align: middle;
  }

  a.header-link, {
    color: #FFFFFF;
  }
}
.product {
  border: 1px #DDDDDD solid;
  padding: 15px;
  margin: 5px;
}
.item { width: 25%; }
.item.w2 { width: 50%; }
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
body {
  font-family: sans-serif;
}
/* ---- input ---- */

//input[type="text"] {
//  font-size: 20px;
//}
/* ---- button ---- */

//.button {
//  display: inline-block;
//  padding: 0.5em 1.0em;
//  background: #EEEEEE;
//  border: none;
//  border-radius: 7px;
//  background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2));
//  color: #222222;
//  font-family: sans-serif;
//  font-size: 16px;
//  text-shadow: 0 1px white;
//  cursor: pointer;
//}
//.button:hover {
//  background-color: #88CCFF;
//  text-shadow: 0 1px hsla(0, 0%, 100%, 0.5);
//  color: #222222;
//}
//.button:active,
//.button.is-checked {
//  background-color: #2288FF;
//}
.button.is-checked {
//  color: white;
//  text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
//  background-color: #C1D72E;
}
//.button:active {
//  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
//}
///* ---- button-group ---- */
//
//.button-group:after {
//  content: '';
//  display: block;
//  clear: both;
//}
//.button-group .button {
//  float: left;
//  border-radius: 0;
//  margin-left: 0;
//  margin-right: 1px;
//}
//.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
//.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
/* ---- isotope ---- */

.isotope {
//  border: 1px solid #333333;
}
/* clear fix */
.isotope:after {
  content: '';
  display: block;
  clear: both;
}
/* ---- .product-item ---- */

.product-item {
  position: relative;
  float: left;
  width: 100px;
  height: 100px;
  margin: 5px;
  padding: 10px;
  //  background: #888;
  color: #262524;
  border: 1px solid #DDDDDD;
}
.product-item > * {
  margin: 0;
  padding: 0;
}
.product-item .name {
  position: absolute;
  left: 10px;
  top: 60px;
  text-transform: none;
  letter-spacing: 0;
  font-size: 12px;
  font-weight: normal;
}
.product-item .symbol {
  position: absolute;
  left: 10px;
  top: 0px;
  font-size: 42px;
  font-weight: bold;
  color: white;
}
.product-item .number {
  position: absolute;
  right: 8px;
  top: 5px;
}
.product-item .weight {
  position: absolute;
  left: 10px;
  top: 76px;
  font-size: 12px;
}
.product-item.alkali { background: #FF0000; background: hsl(0, 100%, 50%); }
.product-item.alkaline-earth { background: #FF8800; background: hsl(36, 100%, 50%); }
.product-item.lanthanoid { background: #FFFF00; background: hsl(72, 100%, 50%); }
.product-item.actinoid { background: #00FF00; background: hsl(108, 100%, 50%); }
.product-item.transition { background: #00FF88; background: hsl(144, 100%, 50%); }
.product-item.post-transition { background: #00FFFF; background: hsl(180, 100%, 50%); }
.product-item.metalloid { background: #0088FF; background: hsl(216, 100%, 50%); }
.product-item.diatomic { background: #0000FF; background: hsl(252, 100%, 50%); }
.product-item.halogen { background: #FF00FF; background: hsl(288, 100%, 50%); }
.product-item.noble-gas { background: #FF0088; background: hsl(324, 100%, 50%); }
/*Login bar*/
//#login_bar_center {
//  width: 960px;
//  margin: auto;
//  height: 40px;
//  background: url("/assets/images/solle_top_logo.png");
//  background-repeat: no-repeat;
//  background-position: 0px 10px;
//}
//#login_bar_center ul {
//  float: right;
//  padding-top: 6px;
//}
//#login_bar_center ul li {
//  float: left;
//  margin-left: 20px;
//}
//#login_bar_center ul li .login {
//  background-color: #199DD8;
//  padding-left: 8px;
//  padding-right: 8px;
//  height: 24px;
//  line-height: 24px;
//  color: white;
//  -webkit-border-radius: 6px;
//  -moz-border-radius: 6px;
//  border-radius: 6px;
//  display: block;
//  font-weight: 700;
//}
//#login_bar_center ul li .login:hover {
//  cursor: pointer;
//}
//#login_bar_center ul li .logout {
//  background-color: #CC2529;
//  height: 24px;
//  line-height: 24px;
//  padding-left: 8px;
//  padding-right: 8px;
//  color: white;
//  -webkit-border-radius: 6px;
//  -moz-border-radius: 6px;
//  border-radius: 6px;
//  display: block;
//  font-weight: 700;
//}
//#login_bar_center ul li .logout:hover {
//  cursor: pointer;
//}
//#login_bar_center ul li .login:after {
//  content: "Login";
//}
//#login_bar_center ul li .login.es:after {
//  content: "Inicio de Sesión";
//}
//#login_bar_center ul li .logout:after {
//  content: "Logout";
//}
//#login_bar_center ul li .logout.es:after {
//  content: "Cerrar Sesión";
//}
//#login_bar_center ul li .member_btn {
//  height: 24px;
//  line-height: 24px;
//  padding-left: 8px;
//  padding-right: 8px;
//  color: #333333;
//  background-color: #C3D600;
//  border: 1px solid #CEDD2E;
//  -webkit-border-radius: 6px;
//  -moz-border-radius: 6px;
//  border-radius: 6px;
//  display: block;
//  font-weight: 700;
//}
//#login_bar_center ul li a {
//  color: #FFFFFF;
////  font-weight: 700;
//  font-size: 1.25em;
//  display: block;
//}
//#login_bar_center ul li a:hover {
//  text-decoration: none;
//}
//#login_bar_center ul li a img {
//  vertical-align: middle;
//}
//#login_bar_center ul li a span#cart_count {
//  vertical-align: bottom;
//}
//#login_bar_center ul li #checkout {
//  position: relative;
//  top: 6px;
//}
//#login_bar {
//  width: 100%;
//  background-color: #C1D72E;
//  z-index: 11;
//  height: 75px;
//}
//ol, ul {
//  list-style: none;
//}
//
//
//.navbar-default {
//  background-color: #C1D72E;
//}
//
//.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
//  background-color: #E8FF50;
//}
//
//
//.navbar-default .navbar-nav > li > a {
//  color: #000000;
//}
//

// Bootstrap overrides.

.text-primary {
  color: #C1D72E;
}
.panel-primary {
  border-color: #C1D72E;
}
.panel-primary > .panel-heading {
  //    color: #FFFFFF;
  background-color: #C1D72E;
  border-color: #C1D72E;
}
.panel-primary > .panel-heading + .panel-collapse .panel-body {
  border-top-color: #C1D72E;
}
.panel-primary > .panel-footer + .panel-collapse .panel-body {
  border-bottom-color: #C1D72E;
}
.bg-primary {
  color: #FFFFFF;
  background-color: #C1D72E;
}
a.bg-primary:hover {
  background-color: #9EB022;
}
.btn-primary {
  //    color: #FFFFFF;
  background-color: #C1D72E;
      border-color: #C1D72E;
}
.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
  background-color: #C1D72E;
  //    border-color: #B1C626;
}
.btn-primary .badge {
  color: #C1D72E;
  //    background-color: #FFFFFF;
}
.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  //    text-decoration: none;
  //    color: #FFFFFF;
  background-color: #C1D72E;
}
.dropdown-menu > .active > a,
.dropdown-menu > .active > a:hover,
.dropdown-menu > .active > a:focus {
  //    color: #FFFFFF;
  //    text-decoration: none;
  //    outline: 0;
  background-color: #C1D72E;
}
.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
  //    color: #FFFFFF;
  background-color: #C1D72E;
}
.navbar-default {
  background-color: #C1D72E;
  //    border-color: #ABBF25;
}
.navbar-inverse {
  background-color: #222222;
  border-color: #080808;
  border-bottom-color: #C1D72E;
  border-bottom-width: 10px;
}
.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  //    z-index: 2;
  //    color: #FFFFFF;
  background-color: #C1D72E;
  border-color: #C1D72E;
  //    cursor: default;
}
.label-primary {
  background-color: #C1D72E;
}
.progress-bar {
  //    float: left;
  //    width: 0%;
  //    height: 100%;
  //    font-size: 12px;
  //    line-height: 20px;
  //    color: #FFFFFF;
  //    text-align: center;
  background-color: #C1D72E;
  //    -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
  //    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
  //    -webkit-transition: width 0.6s ease;
  //    transition: width 0.6s ease;
}
a.list-group-item.active,
a.list-group-item.active:hover,
a.list-group-item.active:focus {
  //    z-index: 2;
  //    color: #000000;
  background-color: #C1D72E;
  border-color: #C1D72E;
}
a.text-primary:hover {
  color: #9EB022;
}
a.bg-primary:hover {
  background-color: #9EB022;
}
.label-primary[href]:hover,
.label-primary[href]:focus {
  background-color: #9EB022;
}
@media (min-width: 768px) {
  .navbar {
    border-radius: 0px;
  }
}
.theme-default .nivoSlider {
  box-shadow: 0px 0px 0px 0px #4A4A4A;
}
.tales {
  width: 100%;
}
.carousel-inner {
  width: 100%;
  max-height: 400px !important;
  min-height: 300px !important;
}
.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
  min-height: 293px;
  min-width: 958px;
}

.carousel-control.left {
    background-image: linear-gradient(to right, transparent 100%, transparent 100%);
    background-repeat: repeat-x;
}

.carousel-control.right {
    background-image: linear-gradient(to left, transparent 100%, transparent 100%);
    background-repeat: repeat-x;
}

.carousel-control .icon-prev, .carousel-control .glyphicon-chevron-left {
    left: 25%;
    margin-left: -10px;
}

.carousel-control .icon-prev, .carousel-control .glyphicon-chevron-left {
    right: 25%;
//    margin-left: -10px;
}

.carousel-control .icon-next, .carousel-control .glyphicon-chevron-right {
//    margin-right: -10px;
    right: 25%;
}


.filter-button {
  width: 100%;
  margin: 3px;
}

.lead-no-margin {
  line-height: 25px;
  font-size: 16px;
  margin-top: 10px;
}

@media (min-width: 768px) {
  .lead-no-margin {
    line-height: 25px;
    font-size: 16px;
    margin-top: 10px;
  }
}

@media (min-width: 992px) {
  .lead-no-margin {
    line-height: 35px;
    font-size: 16px;
  }
}
@media (min-width: 1200px) {
  .lead-no-margin {
    line-height: 55px;
    font-size: 21px;
  }
}

